# xarm6-etf-lab

./: .gitignore  .gitmodules  Makefile  README.md
src/etf_modules/aruco_calibration/aruco_ros/: CMakeLists.txt  package.xml
src/etf_modules/aruco_calibration/aruco_ros/cmake/: Findrpmpl_library.cmake
src/etf_modules/aruco_calibration/aruco_ros/data/: calib_points.yaml  camera_coordinates.yaml  camera_coordinates_all.yaml  camera_coordinates_final.yaml  robot_config.yaml
src/etf_modules/aruco_calibration/aruco_ros/include/: CameraCalibrationNode.h  turtle_tf2_broadcaster.h
src/etf_modules/aruco_calibration/aruco_ros/launch/: single.launch.py  turtle_tf2_demo.launch.py
src/etf_modules/aruco_calibration/aruco_ros/src/: CameraCalibrationNode.cpp  calculate_cam_cords.cpp  calculate_stats.cpp  camera_tf2_broadcaster.cpp  marker_tf2_broadcaster.cpp  simple_single.cpp  subscriber_member_function.cpp  transformation_pub_sub.cpp  turtle_tf2_broadcaster.cpp  update_calib_points.cpp  update_calib_points_dir_kin.cpp  update_calib_pts_cam.cpp
src/etf_modules/perception_etflab/: .gitmodules  CMakeLists.txt  package.xml
src/etf_modules/perception_etflab/apps/: CMakeLists.txt  object_segmentation.cpp  pointcloud_combiner.cpp  real_object_segmentation.cpp  sim_dynamic_object_segmentation.cpp
src/etf_modules/perception_etflab/cmake/: Findrpmpl_library.cmake
src/etf_modules/perception_etflab/data/: perception_etflab_config.yaml  real_perception_etflab_config.yaml  sim_perception_etflab_config.yaml
src/etf_modules/perception_etflab/include/: ObjectSegmentationNode.h  PointCloudCombinerNode.h  Robot.h  object_segmentation.h  pointcloud_combiner.h
src/etf_modules/perception_etflab/include/environment/: AABB.h  Cluster.h  ConvexHulls.h
src/etf_modules/perception_etflab/include/environments/: AABB.h  Clusters.h  ConvexHulls.h  Obstacles.h
src/etf_modules/perception_etflab/src/: CMakeLists.txt  ObjectSegmentationNode.cpp  PointCloudCombinerNode.cpp  Robot.cpp  object_segmentation.cpp  pointcloud_combiner.cpp
src/etf_modules/perception_etflab/src/environment/: AABB.cpp  Cluster.cpp  ConvexHulls.cpp
src/etf_modules/perception_etflab/src/environments/: AABB.cpp  Clusters.cpp  ConvexHulls.cpp  Obstacles.cpp
src/etf_modules/real_bringup/: .gitignore  CMakeLists.txt  package.xml
src/etf_modules/real_bringup/apps/: CMakeLists.txt  test_bottle_and_glass.cpp  test_demo1.cpp  test_demo2.cpp  test_demo3.cpp  test_dynamic_planning.cpp  test_dynamic_task_planning.cpp  test_move_real_xarm6.cpp  test_move_xarm6.cpp  test_pick_and_place.cpp  test_pick_and_place_using_cameras.cpp  test_planning.cpp  test_real_time_planning.cpp  test_real_time_task_planning.cpp  test_task_planning.cpp
src/etf_modules/real_bringup/cmake/: Findrpmpl_library.cmake  Findsim_bringup.cmake  Findsim_bringup_library.cmake
src/etf_modules/real_bringup/data/: bottle_and_glass_config.yaml  demo1_config.yaml  demo2_config.yaml  demo3_config.yaml  dynamic_planning_config1.yaml  dynamic_planning_config2.yaml  dynamic_task_planning_config.yaml  move_real_xarm6_config.yaml  move_xarm6_config.yaml  pick_and_place_config.yaml  pick_and_place_using_cameras_config.yaml  planning_config.yaml  planning_config1.yaml  planning_config2.yaml  real_time_planning_config0.yaml  real_time_planning_config1.yaml  real_time_planning_config2.yaml  real_time_task_planning_config.yaml  scenario_etf_lab.yaml  task_planning_config.yaml
src/etf_modules/real_bringup/include/: base.h  bottle_and_glass.h  move_xarm6.h  pick_and_place.h  pick_and_place_using_cameras.h  planning.h  task_planning.h  test_bottle_and_glass.h  test_move_xarm6.h  test_pick_and_place.h  test_pick_and_place_using_cameras.h  test_planners.h
src/etf_modules/real_bringup/include/base/: BaseNode.h  (+6 more)
src/etf_modules/real_bringup/launch/: real_xarm6_etflab.launch.py  realsense_etflab.launch.py
src/etf_modules/real_bringup/scripts/: test_move_real_xarm6.py  test_move_xarm6.py
src/etf_modules/real_bringup/src/: CMakeLists.txt  base.cpp  bottle_and_glass.cpp  move_xarm6.cpp  pick_and_place.cpp  pick_and_place_using_cameras.cpp  planning.cpp  task_planning.cpp  test_bottle_and_glass.cpp  test_move_xarm6.cpp  test_pick_and_place.cpp  test_pick_and_place_using_cameras.cpp  test_planners.cpp
src/etf_modules/sim_bringup/: CMakeLists.txt  package.xml
src/etf_modules/sim_bringup/apps/: CMakeLists.txt  test_draw.cpp  test_dynamic_planning.cpp  test_dynamic_task_planning.cpp  test_move_xarm6.cpp  test_planning.cpp  test_read_octomap.cpp  test_read_trajectory.cpp  test_real_time_planning.cpp  test_real_time_task_planning.cpp  test_task_planning.cpp  test_write_letter.cpp
src/etf_modules/sim_bringup/cmake/: Findrpmpl_library.cmake
src/etf_modules/sim_bringup/data/: draw_config.yaml  dynamic_planning_config1.yaml  dynamic_planning_config2.yaml  dynamic_task_planning_config.yaml  move_xarm6_config.yaml  planning_config.yaml  planning_config1.yaml  planning_config2.yaml  read_trajectory_config.yaml  real_time_planning_config.yaml  real_time_planning_config0.yaml  real_time_planning_config1.yaml  real_time_planning_config2.yaml  real_time_task_planning_config.yaml  scenario_etf_lab.yaml  task_planning_config.yaml  write_letter_config.yaml
src/etf_modules/sim_bringup/dmps/: dmp.yaml
src/etf_modules/sim_bringup/include/: base.h  move_xarm6.h  planning.h  task_planning.h  test_move_xarm6.h  test_planners.h
src/etf_modules/sim_bringup/launch/: _robot_moveit_common.launch.py  _robot_spawn.launch.py  dynamic_xarm6_etflab.launch.py  static_xarm6_etflab.launch.py  xarm6_etflab.launch.py  xarm6_moveit_gazebo.launch.py
src/etf_modules/sim_bringup/rviz/: etflab.rviz
src/etf_modules/sim_bringup/scripts/: test_move_xarm6.py
src/etf_modules/sim_bringup/src/: CMakeLists.txt  base.cpp  move_xarm6.cpp  planning.cpp  task_planning.cpp  test_move_xarm6.cpp  test_planners.cpp  test_read_octomap.cpp
src/etf_modules/sim_bringup/urdf/: camera_depth_left.xacro  camera_depth_right.xacro  xarm_device.urdf.xacro
src/etf_modules/sim_bringup/world/: etflab.world  etflab1.world  etflab2.world
(+138 files in other folders)
