<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_etflab</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="nermin.covic@etf.unsa.ba">root</maintainer>
  <maintainer email="dinko.osmankovic@etf.unsa.ba">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>perception_pcl</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen</depend>
  <depend>xarm_msgs</depend>
  <depend>xarm_api</depend>
  <depend>rpmpl_library</depend>
  <depend>backward_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
