add_executable(test_move_real_xarm6 test_move_real_xarm6.cpp)
target_compile_features(test_move_real_xarm6 PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_move_real_xarm6 PUBLIC real_bringup_library)

add_executable(test_bottle_and_glass test_bottle_and_glass.cpp)
target_compile_features(test_bottle_and_glass PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_bottle_and_glass PUBLIC real_bringup_library)

add_executable(test_pick_and_place test_pick_and_place.cpp)
target_compile_features(test_pick_and_place PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_pick_and_place PUBLIC real_bringup_library)

add_executable(test_pick_and_place_using_cameras test_pick_and_place_using_cameras.cpp)
target_compile_features(test_pick_and_place_using_cameras PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_pick_and_place_using_cameras PUBLIC real_bringup_library)

add_executable(test_planning test_planning.cpp)
target_compile_features(test_planning PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_planning PUBLIC real_bringup_library)

add_executable(test_task_planning test_task_planning.cpp)
target_compile_features(test_task_planning PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_task_planning PUBLIC real_bringup_library)

add_executable(test_real_time_planning test_real_time_planning.cpp)
target_compile_features(test_real_time_planning PUBLIC c_std_99 cxx_std_17)
target_link_libraries(test_real_time_planning PUBLIC real_bringup_library)

install(TARGETS 
  test_move_real_xarm6
  test_bottle_and_glass
  test_pick_and_place
  test_pick_and_place_using_cameras
  test_planning
  test_task_planning
  test_real_time_planning
  DESTINATION lib/${PROJECT_NAME})